# py-dota2-notify

./: .env.example  .gitignore  Dockerfile  Dockerfile.notify  Dockerfile.redis  Dockerfile.sync  pyproject.toml
.github/workflows/: data-sync-AutoDeployTrigger-77b5baac-9885-4fa7-9130-e6994d95ca32.yml  dota2notify2-AutoDeployTrigger-7447e7c0-5f7e-4778-9aeb-19d59891c4d3.yml  match-notify-AutoDeployTrigger-85dd8470-29b8-4934-ab2b-7b354d743bb4.yml
src/dota2_notify/app/: config.py  main.py  match_checker.py
src/dota2_notify/clients/: cosmosdb_client.py  opendota_client.py  steam_client.py  telegram_client.py
src/dota2_notify/models/: match.py  steam_player_summary.py  user.py
src/dota2_notify/notify/: config.py  main.py
src/dota2_notify/sync/: config.py  main.py
src/dota2_notify/web/: auth.py  dependencies.py  friends.py  notifications.py  static.py  users.py
src/dota2_notify/web/static/: style.css
src/dota2_notify/web/templates/: friends.html  notifications.html  template.html
tests/app/: test_match_checker.py
tests/clients/: test_cosmosdb_client.py  test_opendota_client.py  test_steam_client.py  test_telegram_client.py
tests/models/: test_match.py  test_opendota_match.py
tests/web/: test_auth.py  test_friends.py  test_notifications.py
